# fastapi-auth-production-kit

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: auth_flow_request.yml  bug_report.yml  provider_comparison.yml  security_hardening.yml
.github/workflows/: test.yml
docs/: architecture.md  configuration.md  data-model.md
docs/templates/: production-handoff-checklist.md
labs/: README.md
labs/email-verification/: README.md
labs/local-email-password/: README.md
labs/password-reset/: README.md
labs/rate-limited-auth/: README.md
labs/sqlalchemy-postgres/: README.md
production/: anti-enumeration.md  build-vs-buy-auth.md  deployment.md  disclosure.md  migrations.md  password-hashing.md  provider-comparison.md  rate-limiting.md  security-checklist.md  sqlalchemy-postgres.md  token-strategy.md
production/provider-notes/: auth0.md  clerk.md  logto.md  resend.md  supabase-auth.md
src/prodkit_auth/: __init__.py  config.py  database.py  main.py  routes.py  schemas.py  security.py  service.py  sqlalchemy_track.py
tests/: test_auth_action_tokens.py  test_auth_flow.py  test_password_hashing.py  test_rate_limited_auth.py  test_sqlalchemy_track.py
