[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-auth-production-kit"
version = "0.1.0"
description = "A FastAPI authentication starter with production decision guides."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "prodkit-labs" }]
dependencies = [
  "bcrypt<5",
  "email-validator>=2.1",
  "fastapi>=0.110",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.2",
  "python-jose[cryptography]>=3.3",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
