[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-auth-production-kit"
version = "0.3.1"
description = "A FastAPI authentication starter with production decision guides."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "prodkit-labs" }]
dependencies = [
  # Keep bcrypt below 5 while passlib remains the default bcrypt compatibility layer.
  # bcrypt 5 raises on >72-byte backend-detection passwords and breaks passlib 1.7.x.
  "bcrypt>=4.0,<5",
  "email-validator>=2.1",
  "fastapi>=0.110",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.2",
  "python-jose[cryptography]>=3.3",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "argon2-cffi>=23.1,<26",
  "build>=1.2",
  "httpx>=0.27",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.4",
  "sqlalchemy>=2.0",
]
argon2 = [
  "argon2-cffi>=23.1,<26",
]
postgres = [
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning:passlib.handlers.argon2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
